# speech-to-text-transcriber

./: .gitignore  ASSUMPTIONS.md  README.md  done-tasks.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: audio_loader.py  main.py  text_writer.py  whisper_model.py
tests/: test_audio_loader.py  test_main.py  test_main_integration.py  test_text_writer.py  test_whisper_model.py
