[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ogg-to-text"
version = "0.1.0"
description = "Convert OGG audio file to text"
requires-python = "==3.11.*"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
