[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speech-to-text-transcriber"
version = "0.1.0"
description = "Offline speech-to-text CLI using Whisper large-v3. Auto-detects 99 languages, runs on CPU."
requires-python = "==3.14.*"
dependencies = ["librosa>=0.10.0", "numpy>=1.24.0", "faster-whisper>=0.10.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "soundfile>=0.12.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
